[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Pixel Cowboy.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Menu.png" type="Texture" id=4]
[ext_resource path="res://Sounds/binbash - menu.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Fonts/Pixel Cowboy.otf"

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -482.0
margin_top = -260.0
margin_right = -348.0
margin_bottom = -190.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "PLAY"
flat = true
align = 0
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="Controls" type="Button" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -482.0
margin_top = -180.0
margin_right = -300.0
margin_bottom = -110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "CONTROLS"
flat = true
align = 0
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="Credits" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -482.0
margin_top = -100.0
margin_right = -300.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "CREDITS"
flat = true
align = 0
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="Exit" type="Button" parent="." index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -90.0
margin_right = -22.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "EXIT"
flat = true
align = 2
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="GameTitle" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 590.0
margin_top = 30.0
margin_right = 996.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
text = "FARM 'N' GUN"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Fade" parent="." index="5" instance=ExtResource( 3 )]

[node name="Menu 1-01" type="Sprite" parent="." index="6"]

position = Vector2( 510.782, 304.801 )
scale = Vector2( 1.66082, 1.71557 )
z_index = -1
texture = ExtResource( 4 )
_sections_unfolded = [ "Z Index" ]

[node name="MenuTheme" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = -6.25
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]

[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[connection signal="finished" from="MenuTheme" to="." method="_on_MenuTheme_finished"]


